--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-hogehoge
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>スライダーのサンプル</title>
+
+    <script>
+        //スライダーの値表示
+        function showSlider() {
+            var slidervalue = document.getElementById("slider").Value;
+
+            alert("スライダーの値：" + slidervalue)
+        }
+    </script>
+</head>
+
+<body>
+    <from>
+        <input type="range" id="slider" value="50" min="0" max="100">
+        <br>
+        <input type="button" value="表示" onclick="showSlider()">
+    </from>
+</body>
+
+</html>
