--- a/index.html
+++ b/index.html
@@ -3,24 +3,94 @@
 
 <head>
     <meta charset="utf-8">
-    <title>スライダーのサンプル</title>
+    <title>世界時計</title>
+
+    <!-- <style>
+        #clock {
+            font-family: "Couriew New";
+            background-color: #CCC;
+            border: solid #999 1px;
+            text-align: center;
+            color: #000;
+            width: 680px;
+            padding: 10px;
+        }
+
+        #date {
+            font-size: 20pt;
+        }
+
+        #time {
+            font-size: 42pt;
+        }
+
+        #city {
+            font-display: 20px;
+        }
+    </style>
 
     <script>
-        //スライダーの値表示
-        function showSlider() {
-            var slidervalue = document.getElementById("slider").Value;
 
-            alert("スライダーの値：" + slidervalue)
+        function clock() {
+            var now = new Date();
+
+            var timeTokyo = now.getTime();
+            var timeUTC = timeTokyo - 9 * 60 * 60 * 1000;
+
+            var cityElement = document.getElementById("city");
+            var index = cityElement.selectedIndex;
+            var timeZone = cityElement.options[index].value;
+
+            var timeCity = timeUTC + timeZone * 60 * 60 * 1000;
+
+            now = new Date(timeCity);
+
+
+            //年月日の取得
+            var year = now.getFullYear();
+            var month = now.getMonth();
+            var day = now.getDate();
+
+
+            var weekArray = ["日曜日", "月曜日", "火曜日", "水曜日", "木曜日", "金曜日", "土曜日"];
+            var week = weekArray[now.getDay()];//配列は０オリジン
+            var dateElement = document.getElementById("date");
+            dateElement.innerHTML = year + "/" + month + "/" + day + "/" + week;
+
+            //時の取得
+            var hour = now.getHours();
+            var min = now.getMinutes();
+            var sec = now.getSeconds();
+            var timeElemnt = document.getElementById("time");
+
+            if (hour < 10) hour = "0" + hour;
+            if (min < 10) min = "0" + min;
+            if (sec < 10) sec = "0" + sec;
+
+            timeElemnt.innerHTML = hour + ":" + min + ":" + sec;
+
+            //１秒毎 clock()を実行する 単位はm秒
+            setTimeout("clock()", 1000);
         }
-    </script>
+
+    </script> -->
+
 </head>
 
-<body>
-    <from>
-        <input type="range" id="slider" value="50" min="0" max="100">
-        <br>
-        <input type="button" value="表示" onclick="showSlider()">
-    </from>
+<body onLoad="clock()">
+    <div id="clock">
+        <img src="image/sunrise-1756274__340.jpg">
+        <div id="date">----/----/-- ---</div>
+        <div id="time">--:--:--</div>
+        <select id="city" style="width: 200px; font-size: 32px; background-color:rgb(255, 255, 255)">
+            <option value="-5" selected> NY
+            <option value="0" selected> London
+            <option value="9" selected> Tokyo
+        </select>
+    </div>
 </body>
+
+<script src="js/main.js"></script>
+<link rel="stylesheet" href="css/style.css">
 
 </html>
